# rna-type-model

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README  env.yaml  nextflow.config  pyproject.toml  run_heuristic_labeller.py  train_models.nf
.github/workflows/: main.yaml
heuristic/: run_heuristic_labeller.py  train_heuristic_label_model.py
labelling/: coarse_labelling_functions.py  labels.py
preparation/: convert_data.py  query.sql
preprocessing/: group_data.py  load_and_split_data.py
rna_type/: __main__.py
rna_type/cli/: __init__.py  labelling.py  preparation.py  preprocessing.py  test.py  training.py
rna_type/heuristic/: run_heuristic_labeller.py  split_data_for_labelling.py  test_heuristic_model.py  train_heuristic_label_model.py
rna_type/label_functions/: coarse_labelling_functions.py  labels.py
rna_type/labelling/: coarse_labelling_functions.py  labels.py
rna_type/preparation/: convert_data.py  query.sql
rna_type/preprocessing/: group_data.py  load_and_split_data.py
rna_type/random_forest/: test_random_forest.py  train_random_forest.py
rna_type/utils/: ontology_tests.py
utils/: convert_data.py  ontology_tests.py
workflow/: heuristic_model_training.nf  preprocessing.nf
