[tool.poetry]
name = "rna_type"
version = "0.1.0"
description = "Pipeline to train models for RNA type"
authors = ["Andrew Green <agreen@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.11"
polars = "*"
pandas = "*"
scikit-learn = "^1.1.3"
obonet = "^0.3.0"
click = "^8.1.3"
snorkel = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
xfail_strict = true
filterwarnings = "ignore::DeprecationWarning"
markers = [
    "slow: Tests that take a long time",
    "db: Test that require access to our database",
]
