[tool.poetry]
name = "rna_type"
version = "0.1.0"
description = "Pipeline to train models for RNA type"
authors = ["Andrew Green <agreen@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
polars = "0.14.28"
pandas = "1.5.1"
scikit-learn = "^1.1.3"
obonet = "^0.3.0"
click = "^8.1.3"
snorkel = "0.9.9"
pyarrow = "^9.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
xfail_strict = true
filterwarnings = "ignore::DeprecationWarning"
markers = [
    "slow: Tests that take a long time",
    "db: Test that require access to our database",
]
